# ui-editer

./: .gitignore  README.md
lua_preview/: .gitignore  README.md  requirements.txt  run.py  run.sh
lua_preview/engine_shim/: __init__.py  asset.py  constants.py  events.py  hotreload.py  input.py  loader.py  nvg.py  overlay.py  scenes_index.py  stubs.py
lua_preview/librender/: CMakeLists.txt  build.sh
lua_preview/librender/src/: render.c
lua_preview/librender_egl/: CMakeLists.txt  build.sh  third_party
lua_preview/librender_egl/src/: render.c
nanovg_service/: .gitignore  README.md  build.sh  package-lock.json  package.json  run.sh  vite.config.js
nanovg_service/cases/: hello-nanovg-000001.json  hello-nanovg-000001.lua
nanovg_service/mcp/: server.js
nanovg_service/renderer/: CMakeLists.txt
nanovg_service/renderer/src/: lua_nvg.c  lua_nvg.h  main.c  png_writer.c  png_writer.h
nanovg_service/server/: api_docs.js  diff.js  index.js  render.js  store.js
nanovg_service/web/: index.html
nanovg_service/web/src/: App.jsx  api.js  styles.css
web_layout/: .gitignore  README.md  build.sh  package-lock.json  package.json  run.sh  vite.config.js
web_layout/server/: index.js  lua-runtime.js
web_layout/server/recorder/: boot.lua
web_layout/web/: index.html
web_layout/web/src/: editor.js  main.js  style.css
